package com.uit.se.gogo.enums;

public enum StayType {
    HOTEL,
    MOTEL,
    RESORT
}
