@startuml yuh
skinparam Linetype ortho

entity User {
    id: uuid
    citizen_id: string
    email: string
    password: string
    avatar: string
    firstName: string
    lastName: string
    phone: string
    gender: bit
    address: string
    dateOfBirth: datetime
}

entity StayFavorite {
    id: uuid
    user_id: uuid
    stay_id: uuid
}

entity FlightFavorite {
    id: uuid
    user_id: uuid
    outbound_id: uuid
    return_id: uuid
    is_roundtrip: boolean
}

entity BaseService {
    id: uuid
    name: string
}

entity Flight {
    id: uuid
    airline_id: uuid
    departure_airport_id: uuid
    arrival_airport_id: uuid
    status: string
    gate: string
    departure_time: timestamp
    arrival_time: timestamp
    timezone: string
    duration: interval
    is_return: boolean
}

class FlightQueryResult {
    id: uuid
    is_round_trip: boolean
    outbound_id: uuid
    return_id: uuid
}

entity Seat {
    id: uuid
    number: string
    seat_class: SeatClass
    flight_id: uuid
    base_fare: number
    service_fee: number
    is_available: boolean
}

entity FlightBooking {
    id: uuid
    user_id: uuid
    status: string
    date: timestamp
    total_price: number
}

entity FlightBookingDetails {
    id: uuid
    booking_id: uuid
    seat_id: uuid
    flight_id: uuid
    discount: number
    taxes: number
    total_price: number
}

enum SeatClass {
    economy
    first
    business
}

entity Amenity {
    id: uuid
    name: string
    icon: string
    is_feature: boolean
}

entity ServiceAmenity {
    id: uuid
    amenity_id: uuid
    service_id: uuid
}

entity Airport {
    id: uuid
    code: string
    name: string
    location_id: uuid
}

entity Airline {
    id: uuid
    name: string
    image: string
    ratings: number
    review_count: number
}

entity Review {
    id: uuid
    service_id: uuid
    user_id: uuid
    ratings: number
    content: string
}

entity Policy {
    id: uuid
    airline_id: uuid
    content: string
}

entity FeatureImage {
    id: uuid
    service_id: uuid
    url: string
}

entity Stay {
    id: uuid
    name: string
    address: string
    location_id: uuid
    ratings: number
    type: StayType
    star_rating: number
    overview: string
    latitude: string
    longitude: string
}

entity Advantage {
    id: uuid
    stay_id: uuid
    name: string
}

enum StayType {
    hotel 
    motel 
    resort 
}

entity Room {
    id: uuid
    name: string
    stay_id: uuid
    base_fare: number
    discount: number
    taxes: number
    service_fee: number
    total_price: number
    type: string
    is_available: boolean
    max_guests: number
}

entity RoomBooking {
    id: uuid
    user_id: uuid
    citizen_id: uuid
    status: string
    date: timestamp
    room_id: uuid
    check_in: timestamp
    checkout: timestamp
}

entity Location {
    id: uuid
    city: string
    country: string
    description: string
}

entity Payment {
    id: uuid
    booking_id: uuid
    status: string
    date: timestamp
    payment_method
}

StayFavorite }|-up-|| User
FlightFavorite }|-up-|| User

RoomBooking }|-right-|| User
RoomBooking ||-left-|| Room
RoomBooking ||--|| Payment

StayFavorite }|-up-|| Stay
Review }|--|| BaseService 
ServiceAmenity }|-up-|| BaseService 
Amenity }|--|| ServiceAmenity

Advantage }|-left-|| Stay
FeatureImage }|--|| BaseService 

Room }|-left-|| Stay 

Flight }|-right-|| Airline
Policy }|--|| Airline
Flight }|-left-|| Airport

Airport }|-up-|| Location
Stay }|--|| Location

Seat }|--|| Flight
FlightFavorite }|--|{ Flight
FlightBooking ||--|{ FlightBookingDetails
FlightBookingDetails }|--|| Seat
FlightBookingDetails ||--|| Flight
FlightQueryResult }|--|{ Flight
FlightBooking }|-left-|| User
FlightBooking ||-down-|| Payment

Flight ||--|| BaseService
Stay ||--|| BaseService

@enduml